# papr

./: .gitignore  CMakeLists.txt  Makefile  P_array.txt  README.md  bianyi.sh  choosed_pattern_index_array.txt  cmake_install.cmake  generate_xlsx_for_cugr_based_papr.py  output.xlsx  papr_v0.0.py  papr_v0.1.py  run_cugr2.sh
evaluation_scripts/: evaluation.sh  evaluator  evaluator-v1.cpp  evaluator.cpp  evaluator_old.cpp  makefile  net_format.txt  resource_file_format.txt
flute/: CMakeLists.txt  Makefile  cmake_install.cmake  flute.c  flute.h  flute_mst.c
gamer/: GridScaler2D.cuh
gr/: GlobalRouter.cpp  GridGraph.cpp
multithread/: Scheduler.h  SingleNetRouter.h
pattern_result/: ariane133_68.txt  mempool_tile.txt  nvdla.txt
rsyn/: CMakeLists.txt
rsyn/def/: CMakeLists.txt
rsyn/def/def/: def.tab.cpp
rsyn/lef/: CMakeLists.txt
rsyn/lef/lef/: lef.tab.cpp  lef.tab.h
rsyn/src/rsyn/core/dscp/: LibraryCell.h
rsyn/src/rsyn/io/parser/lef_def/: DEFControlParser.cpp  LEFControlParser.cpp
rsyn/src/rsyn/phy/util/: LefDescriptors.h  PhysicalUtil.h
rsyn/src/rsyn/session/: Session.h
rsyn/src/rsyn/util/: dim.h
src/: CMakeLists.txt  global.h  main.cpp  parameters.cpp  parameters.h
src/gamer/: BasicGamer.cu  BasicGamer.cuh  BasicGamer2D.cu  BasicGamer2D.cuh  GPUMazeRouteBasic.cu  GPUMazeRouteBasic.cuh  GPUMazeRouteTwostep.cu  GPUMazeRouteTwostep.cuh  GPUMazeRouteTwostep3D.cu  GPUMazeRouteTwostep3D.cuh  GPUMazeRouter.cu  GPUMazeRouter.cuh  GPURouteContext.cu  GPURouteContext.cuh  Grid2DExtractor.cu  Grid2DExtractor.cuh  GridScaler.cu  GridScaler.cuh  GridScaler2D.cu  GridScaler2D.cuh  GuidedGamer.cu  GuidedGamer.cuh  gamer_utils.cu  gamer_utils.cuh
src/gr/: GPUMazeRoute.cu  GPUMazeRoute.h  GRNet.cpp  GRNet.h  GRTree.cpp  GRTree.h  GlobalRouter.cpp  GlobalRouter.h  GridGraph.cpp  GridGraph.h  MazeRoute.cpp  MazeRoute.h  PatternRoute.cpp  PatternRoute.h  Torchroute.h
src/multithread/: Scheduler.cpp  Scheduler.h  SingleNetRouter.h  tp.cpp
src/utils/: cuda_smart_ptr.h  geo.h  parameters.cpp  parameters.h  utils.h
utils/: cuda_smart_ptr.h  parameters.cpp
生成xlsx脚本/: README.md  cpu+iss.txt  cpu.txt  generate_xlsx.py  generate_xlsx_used_for_papr_v0.1.py  gpu+iss.txt  gpu.txt
